--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,10 @@
     { "path": "./tsconfig.node.json" }
   ],
   "compilerOptions": {
-    "baseUrl": ".",
+    "types": ["vite/client"],
+    "baseUrl": "../",
     "paths": {
-      "@/*": ["./src/*"]
-    }
+      "@/*": ["./*"],
+    },
   }
 }
