--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "postcss": "^8.5.1",
     "tailwindcss": "^4.0.3",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue3-toastify": "^0.2.8"
   },
   "devDependencies": {
     "@types/node": "^22.13.1",
