--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     { "path": "./tsconfig.node.json" }
   ],
   "compilerOptions": {
-    "types": ["vite/client"],
+    "types": ["vite/client", "vue3-toastify/global"],
     "baseUrl": "../",
     "paths": {
       "@/*": ["./*"],
